feat: remove yarn commands and rename it to npx

--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -9,9 +9,7 @@ jobs:
         uses: actions/setup-node@master
         with:
           node-version: 12.x
-      - name: yarn install
-        run: yarn install
       - name: Danger
-        run: yarn danger ci
+        run: npx danger ci
         env:
           GITHUB_TOKEN: ${{ secrets.CHECKS_TOKEN }}
