--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Danger
         run: npx danger ci
         env:
-          GITHUB_TOKEN: ${{ secrets.GHA_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
