--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -1,7 +1,7 @@
 name: CI Pull Requests
 on:
   pull_request:
-    types: edited
+    types: [opened, repopend, edited]
 jobs:
   build:
     runs-on: ubuntu-latest
