--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "node_modules/.bin/eslint --fix",
         "pretty": "prettier --single-quote --tab-width 4 --write ."
     },
     "author": "Martin Benavides (medev21)",
@@ -43,12 +42,10 @@
     },
     "lint-staged": {
         "pages/**/*.{js,jsx,ts,tsx,json}": [
-            "npm run pretty",
-            "npm run lint"
+            "npm run pretty"
         ],
         "src/**/*.{js,jsx,ts,tsx,json}": [
-            "npm run pretty",
-            "npm run lint"
+            "npm run pretty"
         ],
         "src/**/*.{css,scss}": [
             "npm run pretty"
