--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "author": "Martin Benavides (medev21)",
     "license": "ISC",
     "dependencies": {
-        "@mui/base": "^5.0.0-alpha.114",
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "@mui/material": "^5.11.6",
         "next": "^13.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
