--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "author": "Martin Benavides (medev21)",
     "license": "ISC",
     "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "@mui/material": "^5.11.6",
         "next": "^13.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
@@ -25,6 +28,7 @@
         "@types/react": "^18.0.26",
         "@typescript-eslint/eslint-plugin": "^5.48.0",
         "@typescript-eslint/parser": "^5.48.0",
+        "autoprefixer": "^10.4.13",
         "babel-plugin-module-resolver": "^4.1.0",
         "danger": "^11.2.0",
         "eslint": "^8.31.0",
@@ -38,7 +42,9 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "husky": "^8.0.2",
         "lint-staged": "^13.1.0",
+        "postcss": "^8.4.21",
         "prettier": "^2.8.1",
+        "tailwindcss": "^3.2.4",
         "typescript": "^4.9.4"
     },
     "lint-staged": {
