--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "main": "index.js",
     "scripts": {
         "preinstall": "npx only-allow pnpm",
-        "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
         "pretty": "prettier --write .",
-        "typecheck": "npx tsc"
+        "typecheck": "npx tsc",
+        "test": "vitest",
+        "test:ci": "vitest run",
+        "coverage": "vitest run --coverage"
     },
     "author": "Martin Benavides (medev21)",
     "license": "ISC",
@@ -25,10 +27,13 @@
     "devDependencies": {
         "@commitlint/cli": "^17.3.0",
         "@commitlint/config-conventional": "^17.3.0",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
         "@types/node": "^18.11.18",
         "@types/react": "^18.0.26",
         "@typescript-eslint/eslint-plugin": "^5.48.0",
         "@typescript-eslint/parser": "^5.48.0",
+        "@vitejs/plugin-react": "^3.1.0",
         "autoprefixer": "^10.4.13",
         "babel-plugin-module-resolver": "^4.1.0",
         "danger": "^11.2.0",
@@ -42,11 +47,14 @@
         "eslint-plugin-react": "^7.31.11",
         "eslint-plugin-react-hooks": "^4.6.0",
         "husky": "^8.0.2",
+        "jsdom": "^21.1.0",
         "lint-staged": "^13.1.0",
         "postcss": "^8.4.21",
         "prettier": "^2.8.1",
         "tailwindcss": "^3.2.4",
-        "typescript": "^4.9.4"
+        "typescript": "^4.9.4",
+        "vite-tsconfig-paths": "^4.0.5",
+        "vitest": "^0.28.4"
     },
     "lint-staged": {
         "pages/**/*.{js,jsx,ts,tsx,json}": [
