--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,15 @@
         "incremental": true,
         "paths": {
             "src/*": ["./src/*"]
-        },
-        // "types": ["vitest/globals"]
+        }
     },
     "exclude": ["node_modules"],
-    "include": ["setupTests.ts", "vitest.config.ts","**/*.ts", "**/*.tsx", "next-env.d.ts", "next.config.js"]
+    "include": [
+        "setupTests.ts",
+        "vitest.config.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        "next-env.d.ts",
+        "next.config.js"
+    ]
 }
