--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,18 @@
         "isolatedModules": true,
         "jsx": "preserve",
         "baseUrl": ".",
-        "incremental": true
+        "incremental": true,
+        "paths": {
+            "src/*": ["./src/*"]
+        }
     },
     "exclude": ["node_modules"],
-    "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", "next.config.js"]
+    "include": [
+        "setupTests.ts",
+        "vitest.config.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        "next-env.d.ts",
+        "next.config.js"
+    ]
 }
