feat: install nextjs-auth0 package

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "author": "Martin Benavides (medev21)",
     "license": "ISC",
     "dependencies": {
+        "@auth0/nextjs-auth0": "^2.2.1",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "@mui/material": "^5.11.6",
